ingress-definitions/ingress-httpbin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
  namespace: demo
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "vault-issuer"
    cert-manager.io/common-name: "httpbin.example.com"
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - httpbin.example.com
    secretName: httpbin-tls-secret
  rules:
  - host: httpbin.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: httpbin
            port:
              number: 80
